--- a/FrontEnd_MockInterview/index.html
+++ b/FrontEnd_MockInterview/index.html
@@ -1,13 +1,101 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkillMate AI</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SkillMate AI</title>
+  <style>
+    #preloader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: black;
+      z-index: 9999;
+    }
+
+    .loader {
+      height: 30px;
+      aspect-ratio: 2.5;
+      --_g: no-repeat radial-gradient(farthest-side, #fff 90%, #ffff);
+      background: var(--_g), var(--_g), var(--_g), var(--_g);
+      background-size: 20% 50%;
+      animation: l44 1s infinite linear alternate;
+    }
+
+    @keyframes l44 {
+
+      0%,
+      5% {
+        background-position: calc(0*100%/3) 50%, calc(1*100%/3) 50%, calc(2*100%/3) 50%, calc(3*100%/3) 50%
+      }
+
+      12.5% {
+        background-position: calc(0*100%/3) 0, calc(1*100%/3) 50%, calc(2*100%/3) 50%, calc(3*100%/3) 50%
+      }
+
+      25% {
+        background-position: calc(0*100%/3) 0, calc(1*100%/3) 0, calc(2*100%/3) 50%, calc(3*100%/3) 50%
+      }
+
+      37.5% {
+        background-position: calc(0*100%/3) 100%, calc(1*100%/3) 0, calc(2*100%/3) 0, calc(3*100%/3) 50%
+      }
+
+      50% {
+        background-position: calc(0*100%/3) 100%, calc(1*100%/3) 100%, calc(2*100%/3) 0, calc(3*100%/3) 0
+      }
+
+      62.5% {
+        background-position: calc(0*100%/3) 50%, calc(1*100%/3) 100%, calc(2*100%/3) 100%, calc(3*100%/3) 0
+      }
+
+      75% {
+        background-position: calc(0*100%/3) 50%, calc(1*100%/3) 50%, calc(2*100%/3) 100%, calc(3*100%/3) 100%
+      }
+
+      87.5% {
+        background-position: calc(0*100%/3) 50%, calc(1*100%/3) 50%, calc(2*100%/3) 50%, calc(3*100%/3) 100%
+      }
+
+      95%,
+      100% {
+        background-position: calc(0*100%/3) 50%, calc(1*100%/3) 50%, calc(2*100%/3) 50%, calc(3*100%/3) 50%
+      }
+    }
+  </style>
+</head>
+
+
+<body>
+  <div id="preloader">
+    <div class="loader"></div>
+  </div>
+  <div id="root"></div>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+  <script>
+    window.addEventListener('load', function () {
+      const loader = document.getElementsByClassName('loader')[0];
+      if (loader) loader.style.display = 'none';
+      gsap.to('#preloader', {
+        duration: 1,
+        height: 0,
+        ease: 'power2.inOut',
+        onComplete: function () {
+          const preloader = document.getElementById('preloader');
+          if (preloader) preloader.remove();
+        }
+      });
+    });
+  </script>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
